Finish html for Ghorme-sabzi recipe
Added Steps after list of ingredients

--- a/recipes/ghorme-sabzi.html
+++ b/recipes/ghorme-sabzi.html
@@ -34,8 +34,17 @@
             <li>6-8 whole limou-Amani, pierced with a knife</li>
             <li>1 large red onion</li>
             <li>4 cloves of garlic</li>
+            <li>1 can (400g) of red knidney beans without the juice</li>
             <li>butter or oil to fry the ingredients</li>
-            <li>1 packet of frozen fried herbs (sabzi) for ghorme sabzi (can be found in most iranian shops)</li>
+            <li>1 pack of frozen fried herbs (sabzi) for ghorme sabzi (can be found in most iranian shops)</li>
+            <li>juice of 1 lime (optional)</li>
         </ul>
+        <ol>
+            <li>Step 1 <p>Cut the meat into small to medium pieces, slice the onion and mince the garlic, then add everything into a large pot on medium heat with the oil or butter </p></li>
+            <li>Step 2 <p>Add the turmeric, black pepper, salt, and cardamom right after step 1 and cook until the juices of the meat start forming</p></li>
+            <li>Step 3 <p>Next add some water to the pot, about double the volume of meat. Pierce the limou-Amani and add them to the pot.</p></li>
+            <li>Step 4  <p>Cook until the meat starts feeling soft, then add the frozen sabzi and the beans and cook for another 30 minutes or so</p></li>
+            <li>Step 5 <p>Add the saffron and rose water as well as the lemon juice, stir and that's it, it's ready to eat! Serve with saffron rice or regular rice</p></li>
+        </ol>
     </body>
 </html>
