--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/ghorme-sabzi.html" target="_blank" rel="noopener noreferrer">Ghorme Sabzi</a></li>
-            <li><a href="./recipes/apple_pie.html" target="_blank" rel="noopener noreferrer">Iranian Apple Pie/a></li>
+            <li><a href="./recipes/apple_pie.html" target="_blank" rel="noopener noreferrer">Iranian Apple Pie</a></li>
         </ul>
     </body>
 </html>
