--- a/recipes/apple_pie.html
+++ b/recipes/apple_pie.html
@@ -8,29 +8,30 @@
         <h1>Iranian Apple Pie</h1>
         <img src="../images/apple_pie.jpg" alt="photo of a white bowl containing ghorme sabzi over a white and blue table cloth" width="500px" height="100%">
         <h2>Description</h2>
-        <p> This <strong>Iranian Apple Pie</strong> recipe is  one of  my favourites. If you go Iranian shops ands bakeries you are almost guaranteed to find this type of pie. It's consistency resembles more a cake than a pie. It is really simple to make, and it's super soft and fragrant. The tartness of the apple mixed with cinnamon and the sweetness of the base makes this recipe very balanced and perfect to accompany an afternoon chai that Irainians love so much.</p>
+            <p> This <strong>Iranian Apple Pie</strong> recipe is  one of  my favourites. If you go Iranian shops ands bakeries you are almost guaranteed to find this type of pie. It's consistency resembles more a cake than a pie. It is really simple to make, and it's super soft and fragrant. The tartness of the apple mixed with cinnamon and the sweetness of the base makes this recipe very balanced and perfect to accompany an afternoon chai that Irainians love so much.</p>
 
-        <p>Hope you like this one!  Nushe Jan!</p>
+            <p>Hope you like this one! Nushe Jan!</p>
 
         <h2>Ingredients</h2>
-        <ul>
-            <li>4 eggs</li>
-            <li>3/4 cup sugar</li>
-            <li>60 g soft butter </li>
-            <li>125 ml milk</li>
-            <li>1, 2/3 cup flour</li>
-            <li>2 tsp baking powder</li> 
-            <li>1 tsp vanilla extract or sugar vanilla </li>
-            <li>2~3 apples</li>
-            <li>1 tsp cinnamon powder</li>
-        </ul>
-        <ol>
-            <li>Step 1 <p>Cut the  apples into thin slices (but  not too thin, about half a centimeter thick), place them on a plate, sprinkle cinnamon over them, and then microwave them for 2 minutes.</p></li>
-            <li>Step 2 <p>Add the butter and sugar to a large bowl and mix them  together well until combined. You can use an  electric mixer, but a handheld whisker works just fine. Make  sure the butter is very soft.</p></li>
-            <li>Step 3 <p>Add the eggs and mix them well until combined.</p></li>
-            <li>Step 4 <p>Add the milk and vanilla essence, followed by the baking powder and the flower. Mix everything well until the batter is lump-free an d fluffy.</p></li>
-            <li>Step 5  <p>Line a baking tray with greaseproof paper, then pour about 2/3 of the batter inside. Tap the tray on the counter to remove air bubbles. Line the apple slices on top of the batter, then pour the remaining batter over them, so all the slices are covered.</p></li>
-            <li>Step 6 <p>Put it in the oven at 180 Celsius for about 40 minutes or until cooked. You can sprinkle some icing sugar and crumbled pistachios on top if you want. Nushe Jan!</p></li>
-        </ol>
+            <ul>
+                <li>4 eggs</li>
+                <li>3/4 cup sugar</li>
+                <li>60 g soft butter </li>
+                <li>125 ml milk</li>
+                <li>1, 2/3 cup flour</li>
+                <li>2 tsp baking powder</li> 
+                <li>1 tsp vanilla extract or sugar vanilla </li>
+                <li>2~3 apples</li>
+                <li>1 tsp cinnamon powder</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Cut the  apples into thin slices (but  not too thin, about half a centimeter thick), place them on a plate, sprinkle cinnamon over them, and then microwave them for 2 minutes.</li>
+                <li>Add the butter and sugar to a large bowl and mix them  together well until combined. You can use an  electric mixer, but a handheld whisker works just fine. Make  sure the butter is very soft.</li>
+                <li>Add the eggs and mix them well until combined.</li>
+                <li>Add the milk and vanilla essence, followed by the baking powder and the flower. Mix everything well until the batter is lump-free an d fluffy.</li>
+                <li>Line a baking tray with greaseproof paper, then pour about 2/3 of the batter inside. Tap the tray on the counter to remove air bubbles. Line the apple slices on top of the batter, then pour the remaining batter over them, so all the slices are covered.</li>
+                <li>Put it in the oven at 180 Celsius for about 40 minutes or until cooked. You can sprinkle some icing sugar and crumbled pistachios on top if you want. Nushe Jan!</li>
+            </ol>
     </body>
 </html>
