Fix bug khoresh_bamieh not showing
Had two files with the same name, one without  content. Deleted  the one without content and renamed  file with content.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="./recipes/ghorme-sabzi.html" target="_blank" rel="noopener noreferrer">Ghorme Sabzi</a></li>
             <li><a href="./recipes/apple_pie.html" target="_blank" rel="noopener noreferrer">Iranian Apple Pie</a></li>
-            <li><a href="./recipes/apple_pie.html" target="_blank" rel="noopener noreferrer">Khoreshe Bamieh</a></li>
+            <li><a href="./recipes/khoresh_bamieh.html" target="_blank" rel="noopener noreferrer">Khoreshe Bamieh</a></li>
         </ul>
     </body>
 </html>
