--- a/recipes/apple_pie.html
+++ b/recipes/apple_pie.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Iranian Apple Pie</h1>
-        <img src="../images/apple_pie.jpg" alt="photo of a white bowl containing ghorme sabzi over a white and blue table cloth" width="500px" height="100%">
+        <img src="../images/apple_pie.jpg" alt="photos of small cakes filled with slices of apple and sprinkled with crushed pistachios on a white rectangular plate" width="500px" height="100%">
         <h2>Description</h2>
             <p> This <strong>Iranian Apple Pie</strong> recipe is  one of  my favourites. If you go Iranian shops ands bakeries you are almost guaranteed to find this type of pie. It's consistency resembles more a cake than a pie. It is really simple to make, and it's super soft and fragrant. The tartness of the apple mixed with cinnamon and the sweetness of the base makes this recipe very balanced and perfect to accompany an afternoon chai that Irainians love so much.</p>
 
