--- a/recipes/khoresh_bamieh.html
+++ b/recipes/khoresh_bamieh.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <h1>Khoreshe Bamieh</h1>
-        <img src="../images/Khoresh-Bamieh.jpg" alt="photo of a white bowl containing ghorme sabzi over a white and blue table cloth" width="500px" height="100%">
+        <img src="../images/Khoresh-Bamieh.jpg" alt="photo of a white bowl containing khoreshe bahmieh on a table" width="500px" height="100%">
         <h2>Description</h2>
             <p> <strong>Khoresh Bamieh</strong> originates from the Khuzestan province in southern Iran,
-                where it is traditionally prepared with tamarind sauce. However, this variety, more common elsewhere in Iran, substitutes tomato sauce for the lesser-known tamarind.
+                where it is traditionally prepared with tamarind sauce. However, this variety, more common elsewhere in Iran, substitutes tomato sauce for the lesser-known tamarind.</p>
 
-                <p>Okra, or bamieh in Persian, comes with its own share of controversy. “Oh, not another one,” you say! Okra’s flavor profile is often compared to that of eggplant, and it has both fans and detractors, with strong opinions on both sides. It can develop an unpleasant texture if not properly prepared, with a tendency to become slippery and gooey.</p>
+                <p>Okra, or bamieh in Persian, comes with its own share of controversy. “Oh, not another one,” you say! Okra&#39s flavor profile is often compared to that of eggplant, and it has both fans and detractors, with strong opinions on both sides. It can develop an unpleasant texture if not properly prepared, with a tendency to become slippery and gooey.</p>
             
                 <p>But with a pinch of knowledge and a spoonful of care, this challenge can be overcome. When okra is cut and its cell walls are exposed, it releases a sticky substance that many find off-putting. To avoid this, buy smaller okra and cook them whole. If you need to slice them, make sure the pieces are larger. Cook them with sufficient oil at a higher temperature, avoid overcrowding the pan, and stir them sparingly.</p>
 
